Btn visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ a {
     color: rgb(89, 240, 119);
 }
 
-@media (min-width: 700px) {
+@media screen and (min-width: 900px) {
     
     #button-controls {
         visibility: hidden;
